--- a/resources/css/button.css
+++ b/resources/css/button.css
@@ -19,6 +19,9 @@
 }
 
 /* outlined */
+.btn-outline-primary {
+    @apply text-blue-500 border border-blue-500 hover:bg-blue-500 hover:text-white focus:ring-blue-300;
+}
 
 .btn-outline-success {
     @apply text-green-500 border border-green-500 hover:bg-green-500 hover:text-white focus:ring-green-300;
@@ -29,6 +32,10 @@
 }
 
 /* text */
+
+.btn-text-primary {
+    @apply text-blue-500 hover:bg-blue-500 hover:text-white focus:ring-blue-300;
+}
 
 .btn-text-success {
     @apply text-green-500 hover:bg-green-500 hover:text-white focus:ring-green-300;
