--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,3 +4,8 @@
 
 @import url("./button.css");
 @import url("./scroll.css");
+
+#login-box {
+    background-image: url("/storage/resources/poea_building.jpg");
+    background-size: cover;
+}
